# freemind-sonos

./: .gitignore  Cargo.toml  README.md
src/: content.rs  freemind.rs  main.rs  speaker.rs
