[package]
name = "sonos_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1"
chrono = "0.4"
clap = "3.1"
confy = "0.4"
cron = "0.12"
env_logger = "0.9"
ipnetwork = "0.18"
log = "0.4"
pnet = "0.29"
quick-xml = { version = "0.27", features = ["async-tokio", "serialize"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sonor = "2"
tokio = { version = "1.17", features = ["full"] }
url = "2.4"
